# rust_mir2

./: .gitignore  Cargo.toml  README.md
godot/: project.godot
godot/assets/UI_loading/: 0000.bmp.import  0001.bmp.import  0002.bmp.import  0003.bmp.import  0004.bmp.import  0005.bmp.import  0006.bmp.import  0007.bmp.import  0008.bmp.import  0009.bmp.import  1.bmp.import  10.bmp.import  11.bmp.import  12.bmp.import  13.bmp.import  14.bmp.import  15.bmp.import  16.bmp.import  17.bmp.import  18.bmp.import  2.bmp.import  3.bmp.import  4.bmp.import  5.bmp.import  6.bmp.import  7.bmp.import  8.bmp.import  9.bmp.import
godot/assets/UI_select/: 0000.bmp.import  0001.bmp.import  0002.bmp.import  0003.bmp.import  0004.bmp.import  0005.bmp.import  0006.bmp.import  0007.bmp.import  0008.bmp.import  0009.bmp.import  0010.bmp.import  0011.bmp.import  20.bmp.import  21.bmp.import  22.bmp.import  23.bmp.import  (+14 more)
godot/native/: Mosnter.gdns  game.gdnlib  otherPlayer.gdns  player.gdns  player2.gdns  websocket.gdns
godot/scenes/: Player.tscn  monster.tscn  otherPlayer.tscn
godot/script/: closeEq.gd  closebg.gd  input.gd  loding.gd  manager.gd  menu.gd  minibar.gd  minipanel.gd  minipanel2.gd  openeq.gd  selectScence.gd  startGame.gd
godot/tilemap/: map0.png.import  map1.png.import  map3.png.import  start.tres
rust/: Cargo.toml
rust/lsz_macro/: Cargo.toml
rust/lsz_macro/src/: lib.rs
rust/src/: diablo_player.rs  lib.rs  man_base.rs  mosnter.rs  other_player.rs  player.rs  player2.rs  websocket.rs
rust/src/tools/: get_texture.rs  json_read.rs  math.rs  mod.rs  msg_base.rs
(+450 files in other folders)
