[package]
authors = ["529124368 <529124368@qq.com>"]
edition = "2018"
name = "zimuge"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
futures-channel = "0.3.21"
futures-util = {version = "0.3", default-features = false, features = ["sink"]}
gdnative = {git = "https://github.com/godot-rust/godot-rust.git"}
lsz_macro = {path = "./lsz_macro"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = {version = "*", features = ["connect"]}
url = "*"

[profile.release]
panic = "abort"
